--- a/proposal.html
+++ b/proposal.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Accel RFP | RFP Form</title>
 
-  <!-- Leaflet CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha512-p5QvY9H5x0p3zv0l7d3uY2D9i4hKxgxM8v4Kk1E6yQIVZ8HjJZtSzmuTqEYsEO4h5l0uVdxkE/F2kcQoo0Tt0w=="
-    crossorigin=""
-  />
+<!-- Leaflet CSS -->
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giYMeFGvwJxP8Y="
+  crossorigin=""
+/>
 
   <!-- App Styles -->
   <link rel="stylesheet" href="styles.css" />
@@ -119,10 +119,12 @@
     <p>© 2025 Accel Analysis | Industrial Diplomacy Division</p>
   </footer>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha512-vLZfM1r87gqfUlnItp8qG0O8N1XLx1TqBQFwqHobfCzKpIYfQ7zjDA3SeGSOxgAvXxJkncJbD4PUoAc4n1iT9w=="
-    crossorigin=""></script>
+<!-- Leaflet JS (after CSS) -->
+<script
+  src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-o9N1j3d1Q4dBFayr8x5x2yIWu6y83L+cqYLCfK8n7+g="
+  crossorigin=""
+></script>
 
   <!-- Core Scripts -->
   <script src="config.js"></script>
