--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <!-- Leaflet CSS -->
 <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+Zcx6OD0Uh60Xr1muEoWPABFwQB2d7yW5Kc9eOi4A="
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giYMeFGvwJxP8Y="
   crossorigin=""
 />
+  
   <!-- App Styles -->
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
