--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link
   rel="stylesheet"
   href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+Zcx6OD0Uh60Xr1muEoWPABFwQB2d7yW5Kc9eOi4A="
+  integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giYMeFGvwJxP8Y="
   crossorigin=""
 />
   
@@ -96,10 +96,10 @@
     <p>© 2025 Accel Analysis | Industrial Diplomacy Division</p>
   </footer>
 
-<!-- Leaflet JS (after CSS) -->
+<!-- Leaflet JS -->
 <script
   src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-  integrity="sha256-sA+Zcx6OD0Uh60Xr1muEoWPABFwQB2d7yW5Kc9eOi4A="
+  integrity="sha256-o9N1j3d1Q4dBFayr8x5x2yIWu6y83L+cqYLCfK8n7+g="
   crossorigin=""
 ></script>
   
