--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 Accel Analysis | Industrial Diplomacy Division</p>
+    <p>© 2025 Accel Analysis | Industrial Diplomacy </p>
   </footer>
 
 <!-- Leaflet JS -->
