--- a/proposal.html
+++ b/proposal.html
@@ -116,7 +116,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Accel Analysis | Industrial Diplomacy Division</p>
+    <p>© 2025 Accel Analysis | Industrial Diplomacy </p>
   </footer>
 
 <!-- Leaflet JS -->
