--- a/admin.html
+++ b/admin.html
@@ -215,7 +215,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Accel Analysis | Industrial Diplomacy Division</p>
+    <p>© 2025 Accel Analysis, LLC | Industrial Diplomacy</p>
   </footer>
 
   <!-- Core Scripts -->
